# bazel_rules_go_default_info_provider_bug

./: BUILD.bazel  README.md  WORKSPACE
